# capacium-mcp

./: AGENTS.md  README.md  pyproject.toml
src/capacium_mcp/: __init__.py  crawler_tools.py  server.py
